@@ -1,3 +1,9 @@
+2006-02-12  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/external/classpath/gnu/java/net/protocol/file/Connection.java
+	(unquote) Use System.arraycopy rather than copying UTF-8 bytes one by one.
+	Fixed comment.
+
 2006-02-12  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	Fix for #19
